<resources>
    <array name="list_intro_image">
        <item>@drawable/ic_intro_one</item>
        <item>@drawable/ic_intro_two</item>
        <item>@drawable/ic_intro_three</item>
        <item>@drawable/ic_intro_four</item>
    </array>
    <string-array name="list_intro_title">
        <item>Manage Products</item>
        <item>Manage Employees</item>
        <item>Easy Transaction</item>
        <item>Buyer Orders</item>
    </string-array>
    <string-array name="list_intro_message">
        <item>Now the products you sell can be easily managed via your smartphone.</item>
        <item>Now you can easily manage attendance, salaries and bonuses for employees.</item>
        <item>Now transactions with buyers are easier by scanning the bar code.</item>
        <item>Now you can transact online with buyers.</item>
    </string-array>

    <string name="app_name">WarungKu</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="started">Started</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="started_message">We will help you easily manage your shop and reach a wider range of consumers.</string>
    <string name="hello">Hello,</string>
    <string name="login_message">Welcome back, please log in with your account to continue!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="goto_register_message">Don\'t have an account?</string>
    <string name="welcome">Welcome,</string>
    <string name="register_message">Come join us, we will help manage your shop!</string>
    <string name="full_name">Full name</string>
    <string name="store_name">Store name</string>
    <string name="register_goto_login_message">Already have an account?</string>
    <string name="sheet_condition_message">By login or register it mean you agree to</string>
    <string name="you_must_know">You must know!</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="just_one_more_step">Just one more step,</string>
    <string name="verification_message">For security we need to verify your account!</string>
    <string name="verification_info">We have sent a verification code to the email \n <b>%s</b></string>
    <string name="not_receive_the_code">Not receive the code?</string>
    <string name="resending">Resending</string>
    <string name="verification">Verification</string>
    <string name="error_text_changed_full_name">Name min 4 character!</string>
    <string name="error_text_changed_store">Store name min 4 character!</string>
    <string name="error_text_changed_email">Format email is wrong!</string>
    <string name="error_text_changed_password">Password min 8 character!</string>
    <string name="error_text_changed_account_already_registered">Account with same email is already exist!</string>
    <string name="error_text_changed_password_empty">Password cannot be empty!</string>
    <string name="error_text_changed_account_is_not_registered">Account is not registered!</string>
    <string name="error_text_changed_wrong_password">Wrong password!</string>
    <string name="wrong_verification_code">Wrong Verification Code</string>
    <string name="verification_code_expired">Verification Code Expired</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="income_today">Income Today</string>
    <string name="dummy_income_today"><font size='14'>Rp</font> 10.454.000</string>
    <string name="net_profit">Net profit</string>
    <string name="percentage">Percentage</string>
    <string name="dummy_net_profit"><font size='10'>Rp</font> 1.609.916</string>
    <string name="dummy_percentage">+15.4 %</string>
    <string name="product">Product</string>
    <string name="employee">Employee</string>
    <string name="transaction">Transaction</string>
    <string name="order">Order</string>
    <string name="customer_contact">Customer Contact</string>
    <string name="report_result">Report Result</string>
    <string name="money_out">Money Out</string>
    <string name="other">Other</string>
    <string name="rp">Rp</string>
    <string name="tips_for_you">Tips For You</string>
    <string name="more_details">More details</string>
    <string name="search_product">Search Product…</string>
    <string name="all">All</string>
    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="medicine">Medicine</string>
    <string name="tool">Tool</string>
    <string name="add_product">Add Product</string>
    <string name="warn_message_information_product">Please fill in the product data correctly so that it is easier for you to manage that data.</string>
    <string name="product_information">Product Information</string>
    <string name="product_name">Product name</string>
    <string name="pcs">PCS</string>
    <string name="box">BOX</string>
    <string name="gr">GR</string>
    <string name="kg">KG</string>
    <string name="unit">Unit</string>
    <string name="weight">Weight</string>
    <string name="available">Available</string>
    <string name="minimal_order">Min order</string>
    <string name="expired">Expired</string>
</resources>