<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_home_ic_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_secondary"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_app_dashboard"
            app:layout_constraintBottom_toBottomOf="@+id/iv_home_ic_notification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_home_ic_notification"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iv_home_ic_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_secondary"
            android:layout_marginEnd="@dimen/margin_secondary"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_notification"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_home_ic_notification">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/PrimaryBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_secondary"
                        android:layout_marginTop="@dimen/margin_secondary"
                        android:text="@string/income_today" />

                    <TextView
                        style="@style/PrimaryHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_secondary"
                        android:layout_marginTop="@dimen/margin_small"
                        tools:text="@string/dummy_income_today" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_secondary"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/PrimaryBody"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/net_profit" />

                        <TextView
                            style="@style/PrimaryBody"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/percentage" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_secondary"
                        android:layout_marginTop="@dimen/margin_small"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/PrimaryBody"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/color_primary"
                            tools:text="@string/dummy_net_profit" />

                        <TextView
                            style="@style/PrimaryBody"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textColor="@color/color_primary"
                            tools:text="@string/dummy_percentage" />

                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:background="@color/color_secondary_divide">

                        <com.implizstudio.android.app.warungkuowner.ui.component.FeatureComponent
                            android:id="@+id/fc_product"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_medium"
                            app:featureIcon="@drawable/ic_product"
                            app:featureTitle="@string/product"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/fc_employee"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                        <com.implizstudio.android.app.warungkuowner.ui.component.FeatureComponent
                            android:id="@+id/fc_employee"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_medium"
                            app:featureIcon="@drawable/ic_employee"
                            app:featureTitle="@string/employee"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/fc_transaction"
                            app:layout_constraintStart_toEndOf="@+id/fc_product"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                        <com.implizstudio.android.app.warungkuowner.ui.component.FeatureComponent
                            android:id="@+id/fc_transaction"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_medium"
                            app:featureIcon="@drawable/ic_transaction"
                            app:featureTitle="@string/transaction"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/fc_order"
                            app:layout_constraintStart_toEndOf="@+id/fc_employee"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                        <com.implizstudio.android.app.warungkuowner.ui.component.FeatureComponent
                            android:id="@+id/fc_order"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_medium"
                            app:featureIcon="@drawable/ic_order"
                            app:featureTitle="@string/order"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/fc_transaction"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                        <com.implizstudio.android.app.warungkuowner.ui.component.FeatureComponent
                            android:id="@+id/fc_customer_contact"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_secondary"
                            android:layout_marginBottom="@dimen/margin_medium"
                            app:featureIcon="@drawable/ic_contact"
                            app:featureTitle="@string/customer_contact"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/fc_report_result"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/fc_product"
                            app:layout_constraintVertical_bias="1.0" />

                        <com.implizstudio.android.app.warungkuowner.ui.component.FeatureComponent
                            android:id="@+id/fc_report_result"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_secondary"
                            android:layout_marginBottom="@dimen/margin_medium"
                            app:featureIcon="@drawable/ic_report_result"
                            app:featureTitle="@string/report_result"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/fc_money_out"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/fc_customer_contact"
                            app:layout_constraintTop_toBottomOf="@+id/fc_employee"
                            app:layout_constraintVertical_bias="1.0" />

                        <com.implizstudio.android.app.warungkuowner.ui.component.FeatureComponent
                            android:id="@+id/fc_money_out"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_secondary"
                            android:layout_marginBottom="@dimen/margin_medium"
                            app:featureIcon="@drawable/ic_money_out"
                            app:featureTitle="@string/money_out"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/fc_other"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/fc_report_result"
                            app:layout_constraintTop_toBottomOf="@+id/fc_transaction"
                            app:layout_constraintVertical_bias="1.0" />

                        <com.implizstudio.android.app.warungkuowner.ui.component.FeatureComponent
                            android:id="@+id/fc_other"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_secondary"
                            android:layout_marginBottom="@dimen/margin_medium"
                            app:featureIcon="@drawable/ic_other"
                            app:featureTitle="@string/other"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/fc_money_out"
                            app:layout_constraintTop_toBottomOf="@+id/fc_order"
                            app:layout_constraintVertical_bias="1.0" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>