<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="eventListener"
            type="com.implizstudio.android.app.warungkuowner.util.EventListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.activity.login.LoginActivity">

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_primary_horizontal_progress"
            android:indeterminate="true"
            android:indeterminateTint="@color/color_secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/iv_login_ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_secondary"
            android:layout_marginTop="@dimen/margin_secondary"
            android:onClick="@{() -> eventListener.destroyPage()}"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_login_title"
            style="@style/PrimaryHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_secondary"
            android:layout_marginTop="@dimen/margin_secondary"
            android:text="@string/hello"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_login_ic_back"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_login_message"
            style="@style/PrimaryCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_secondary"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/login_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_title"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_secondary"
            android:layout_marginTop="@dimen/margin_high"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_message"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_login_email"
                style="@style/PrimaryBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_on_primary_light"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_secondary"
            android:layout_marginTop="@dimen/margin_primary"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_login_email"
            app:layout_constraintVertical_bias="0.0"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_login_password"
                style="@style/PrimaryBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_on_primary_light"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_login_forgot_password"
            style="@style/PrimaryCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_secondary"
            android:text="@string/forgot_password"
            android:textColor="@color/color_secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_login_password"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_secondary"
            android:layout_marginBottom="@dimen/margin_secondary"
            android:background="@drawable/bg_button_rounded"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@+id/ll_login_goto_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <LinearLayout
            android:id="@+id/ll_login_goto_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_secondary"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                style="@style/PrimaryCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goto_register_message" />

            <TextView
                android:id="@+id/tv_login_goto_register"
                style="@style/PrimaryCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/register"
                android:textColor="@color/color_secondary"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
